testsuite/tests/v1/val_decl/already_existing_symbol/test.out
Error: Symbol declared multiple times
   ╭─[ <working-dir>/script.lkql:2:1 ]
   │
 1 │ val x = 1
   │ ────┬────  
   │     ╰────── Hint: Previously declared here
 2 │ val x = 2
   │ ────┬────  
   │     ╰────── The symbol "x" already exists in the current scope
───╯
